; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_link_elf.c_relocate_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_link_elf.c_relocate_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@elf_lookup = common dso_local global i32 0, align 4
@elf_reloc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @relocate_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @relocate_file(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @elf_lookup, align 4
  %6 = load i32, i32* @elf_reloc, align 4
  %7 = call i32 @relocate_file1(i32 %4, i32 %5, i32 %6, i32 0)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @elf_lookup, align 4
  %13 = load i32, i32* @elf_reloc, align 4
  %14 = call i32 @relocate_file1(i32 %11, i32 %12, i32 %13, i32 1)
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %10, %1
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @relocate_file1(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
